Updated input field names

--- a/ngpwaworkshop.frontend/ngpwaclientapp/src/app/app.component.html
+++ b/ngpwaworkshop.frontend/ngpwaclientapp/src/app/app.component.html
@@ -9,13 +9,13 @@
     <div>
       <p>
         <mat-form-field>
-          <input type="text" matInput placeholder="Bitte Namen eingeben" [(ngModel)]="name" name="userName" required
+          <input type="text" matInput placeholder="Bitte Namen eingeben" [(ngModel)]="name" name="chatUserName" required
             minlength="3">
         </mat-form-field>
       </p>
       <p>
         <mat-form-field>
-          <input type="text" matInput placeholder="Bitte Nachricht eingeben" [(ngModel)]="message" name="message"
+          <input type="text" matInput placeholder="Bitte Nachricht eingeben" [(ngModel)]="message" name="chatMessage"
             required minlength="3">
         </mat-form-field>
       </p>
