Updated App Title.

--- a/ngpwaworkshop.frontend/ngpwaclientapp/src/app/app.component.html
+++ b/ngpwaworkshop.frontend/ngpwaclientapp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Dataformers PWA Demo 2</span>
+  <span>Dataformers PWA Demo Step 2</span>
 </mat-toolbar>
 
 
